--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
       			</ul>
 			</div>
        </div>
-        
+        <div></div>
         <div id="menu">
             <nav class="navbar-wrapper navbar-default" role="navigation">
                 <div class="container">
